With ref to Linkedup update Version:- 1.5.0
This change improves the feed microservice architecture by separating concerns:

- Java feed microservice now strictly handles post retrieval, repost relationships,
  ordering, and pagination without user-service coupling.
- Node.js acts as the aggregation layer, enriching feed items with user context,
  including reposter and original author profile data.
- Repost flattening was removed to preserve actor/object semantics required
  for LinkedIn-style feed rendering.

This avoids cross-service entity leakage, prevents N+1 queries, and keeps the
frontend contract unchanged.

** Also I am aware of some UI glitches that has been caused in feed because of this update**

**Also Readme.md has been updated**